<resources>
    <string name="app_name">Khiladi Adda</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Hi User</string>
    <string name="action_settings">Settings</string>
    <string name="text_msg">Message</string>
    <string name="ok">OK</string>
    <string name="verify">Verify Aadhar</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_mobile">Mobile Number</string>
    <string name="hint_email">Email Address</string>
    <string name="prompt_mobile">Mobile Number</string>
    <string name="hint_password">Password</string>
    <string name="text_terms">Please check Term &amp; Conditions, Legality &amp; Responsible Gaming to proceed further!</string>
    <string name="text_age_terms">I\'m over 18 and i understand that under-age uses of this app may be illegal. I agree to complete my KYC before the first cash withdrawal on the app.</string>
    <string name="txt_play_responsible">This game may be habit forming or financially risk. Play Responsibly.</string>
    <string name="txt_play_responsible_dashboard">This is a real money gaming app.\nPlease play responsibly and follow limits.</string>
    <string name="txt_save">Save</string>
    <string name="text_send_otp">Send OTP</string>
    <string name="text_confirm_otp">Confirm OTP</string>
    <string name="help_otp">You have received OTP from KhiladiAdda on your registered mobile number.\nPlease enter OTP here to withdraw amount.</string>
    <string name="title_otp_authentication">OTP Authentication</string>
    <string name="txt_resend_otp"><u>Resend OTP</u></string>
    <string name="hint_user_name">Username</string>
    <string name="hint_country">Country</string>
    <string name="text_update">Update</string>
    <string name="txt_gender">Gender</string>
    <string name="txt_male">Male</string>
    <string name="txt_female">Female</string>
    <string name="title_home">Home</string>
    <string name="hint_invite_code_optional">Refer Code (Optional)</string>
    <string name="server_client_id">260457956171-vpoda1soufobj70gir71l2ktvsnb6p73.apps.googleusercontent.com</string>
    <string name="facebook_app_id">1464506757391561</string>
    <string name="fb_login_protocol_scheme">fb1464506757391561</string>
    <string name="txt_read_sms_permission">Please allow KhiladiAdda to auto detect OTP.</string>
    <string name="text_splash_play">Play Hard, Win Big</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_next">Next</string>
    <string name="txt_enter_otp">Enter the 6 digit code sent to</string>
    <string name="txt_progress_authentication">Please wait...</string>
    <string name="error_internet">Please check your internet connection or try again later!</string>
    <string name="text__past">Past</string>
    <string name="text__live">Live</string>
    <string name="text__upcoming">Upcoming</string>
    <string name="text_question_ex">Q.25</string>
    <string name="text_leaderboard">Leaderboard</string>
    <string name="text_invite">Refer friends and\nEarn 5 coins\nfor each referral</string>
    <string name="text_invite_code">Your invite code is</string>
    <string name="text_invite_whatsapp">INVITE VIA WHATSAPP</string>
    <string name="text_sharing_option">MORE SHARING OPTIONS</string>
    <string name="text_referred_friends">Total Friends Joined</string>
    <string name="text_view">View</string>
    <string name="text_earning_through_friends">Earned through\nFriends</string>
    <string name="text_friends_joined">Total Friends\nJoined</string>
    <string name="txt_submit">Submit</string>
    <string name="my_dashboard">My Dashboard</string>
    <string name="my_profile">My Profile</string>
    <string name="my_stats">My Stats &amp; Voucher</string>
    <string name="my_wallet">My Wallet</string>
    <string name="my_rewards_offer">My Rewards &amp; Offers</string>
    <string name="my_referals">My Referrals</string>
    <string name="menu_notification">Notification</string>
    <string name="menu_ludo">Ludo</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_responsible_gaming">Responsible Gaming</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="press_again_exit">Press again to exit</string>
    <string name="text_recent_transaction">Recent Transactions</string>
    <string name="text_total_coins">Total Coins</string>
    <string name="text_bonus">Bonus</string>
    <string name="text_wining">Winnings</string>
    <string name="text_deposited">Deposited</string>
    <string name="text_withdraw">Withdraw</string>
    <string name="text_wining_cash">Wining Cash : Rs. 0</string>
    <string name="text_cash_withdraw_options">Cash Withdraw Options</string>
    <string name="text_enter_amount">Enter Amount</string>
    <string name="action_notifications">Notification</string>
    <string name="txt_dob">Date of Birth</string>
    <string name="text_invitation_code">Invitation Code</string>
    <string name="my_add_money">Add Money</string>
    <string name="my_withdraw_wallet">Withdraw Wallet</string>
    <string name="wallet_transaction">Wallet Transactions</string>
    <string name="text_invite_friends">Invite Friends</string>
    <string name="text_logout">Logout</string>
    <string name="cancel">No</string>
    <string name="txt_alert_logout">Are you sure want to logout?</string>
    <string name="text_otp_send_successfully">OTP is send to your mobile number</string>
    <string name="text_change_pan">Update PAN</string>
    <string name="txt_pan">PAN</string>
    <string name="text_change_dob">Change DOB</string>
    <string name="text_change_pwd">Change Password</string>
    <string name="text_add_challenge">Add Challenge</string>
    <string name="hint_state">State</string>
    <string name="text_upload">Upload</string>
    <string name="txt_profile_update">Profile Update</string>
    <string name="my_facts">My Facts</string>
    <string name="text_pan_number">PAN Number (As printed on PAN card)</string>
    <string name="txt_allow_permission">Please allow permission.</string>
    <string name="txt_progress_uploading_image">Please wait while uploading image...</string>
    <string name="text_all">All</string>
    <string name="text_monthly">Monthly</string>
    <string name="text_champions">Champions</string>
    <string name="text_adda">Adda</string>
    <string name="text_help">Help</string>
    <string name="text_term_condition">Terms and Conditions</string>
    <string name="text_legality">Legality</string>
    <string name="text_privacy_policy">Privacy Policy</string>
    <string name="text_cancellation_policy">Cancellation Policy</string>
    <string name="text_contact_us">Contact Us</string>
    <string name="text_about_us">About Us</string>
    <string name="text_update_mobile">Update Mobile Number</string>
    <string name="text_verified">Verified</string>
    <string name="text_no">No</string>
    <string name="text_yes">Yes</string>
    <string name="text_amount_rs">enter amount in rupees</string>
    <string name="text_recharge">Recharge</string>
    <string name="text_contact_email">Contact via Email</string>
    <string name="text_payment_status">Payment Status</string>
    <string name="text_payment_status_msg">Congrats, Your payment is successful. 100 coin has been added to your wallet.</string>
    <string name="text_game_credential">Game Details</string>
    <string name="hint_character_name">Characted Id</string>
    <string name="text_resend_otp">Resend OTP</string>
    <string name="text_pubg">PubG</string>
    <string name="text_call_duty">Call Of Duty</string>
    <string name="text_my_league">My Leagues</string>
    <string name="text_view_participant">View Participants</string>
    <string name="text_no_participant">This league has been created recently. Participant will start joining soon.</string>
    <string name="text_zero_double">00</string>
    <string name="text_fifty">50</string>
    <string name="text_rs_per_coin">Rs.1 = 1 Coin</string>
    <string name="text_entry_fee">Entry Fee</string>
    <string name="text_select_image">Please select image to upload</string>
    <string name="text_uploaded_succefully">Profile image is ready. Click update to save your profile image and details.</string>
    <string name="text_update_username">Click on edit below to update username</string>
    <string name="text_select_term_condition">Please select Terms &amp; condition box</string>
    <string name="text_select_resp_gaming">Please select KYC &amp; Age box</string>
    <string name="hint_game_user_name">Game Username</string>
    <string name="hint_team_id">Team Id</string>
    <string name="txt_pay">Pay</string>
    <string name="text_share_teamid">Share Team Unique Id</string>
    <string name="text_transfer_coins">TRANSFER COINS</string>
    <string name="team_code">Team Code</string>
    <string name="text_paytm_number">Paytm Number</string>
    <string name="text_account_number">Bank Account Number</string>
    <string name="text_ifsc">Bank IFSC Code</string>
    <string name="text_pending">Pending</string>
    <string name="text_approved">Approved</string>
    <string name="text_credited">Credited</string>
    <string name="text_upi_address">UPI Address</string>
    <string name="text_free_fire">Free Fire</string>
    <string name="later">Later</string>
    <string name="update_now">Update Now</string>
    <string name="text_squad_payment">*This amount will be used to create your a team and your team mate doesn\'t have to pay. You can ask team mate to transfer the amount to your wallet using transfer coin option in Wallet.*\n 1. Only one member of your team can create a team.\n 2. After creating a team you will be get a Slot and TeamId. Share TeamId with your team mates.\n 3. Your other team mates will join the team using TeamId on clicking Join Team. \n 4. You can see your created team details i.e Slot,TeamId &amp; Team mates using option MyLeague->Upcoming->ViewMyTeam.</string>
    <string name="text_view_video">How To Play? View Video</string>
    <string name="text_play_video">View Video</string>
    <string name="video_message">Have any issue in creating and joining team. Check this video to guide you through.</string>
    <string name="text_dont_ask_again">Don\'t show\n me again</string>
    <string name="help_pubg_credential">* Please enter your BattleGround India username in username field and BattleGround India game characterId in characterId field.\n Any wrong entry will not able to provide you winning amount.</string>
    <string name="help_cod_credential">* Please enter your Call of Duty username in username field.\n* Any wrong entry will not able to provide you winning amount.</string>
    <string name="room_id">Room Code</string>
    <string name="text_cricket_description">Select your battle from below matches and \n invest in your combo to take home exciting prizes</string>
    <string name="text_battles">Battles</string>
    <string name="help_vs">vs</string>
    <string name="text_how_play">How To Play?</string>
    <string name="text_points_calculate">How Points Will be Calculated?</string>
    <string name="fan_battle">Fan Battle</string>
    <string name="clashx">ClashX</string>
    <string name="text_splash_aigf_approved">AIGF Approved</string>
    <string name="tv_instant_withdrawal">Instant Withdrawal</string>
    <string name="_100_real_players">100% Real Players</string>
    <string name="text_no_more__winning_big"><![CDATA[No more picking 11 player team❌,Just choose a combo of your favourite players & start winning big ✅]]></string>
    <string name="text_clashx_discription">Choose your four favourite players, go one on one and win big - ClashX (The X-factor of winning)</string>
</resources>